Fixed message spacing

--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,7 @@ h1 {
     text-align: center;
     vertical-align: middle;
 }
+
+h2 {
+    text-align: center;
+}
